correcting banner spacing

--- a/group/blocks/banner/banner.css
+++ b/group/blocks/banner/banner.css
@@ -10,7 +10,7 @@
 }
 
 .banner.shaded p {
-  padding: var(--spacing-s) 0;
+  padding: var(--spacing-m) 0;
 }
 
 .banner.shaded h2,
